deployments/openshift/kustomize/base/api/nestjs/dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: nestjs-app
spec:
  strategy:
    type: Rolling
  triggers:
      - type: ConfigChange
      - imageChangeParams:
          automatic: true
          containerNames:
            - nestjs-app
          from:
            kind: ImageStreamTag
            name: api:develop-latest
            namespace: f3c07a-tools
        type: ImageChange
  replicas: 1
  selector:
    name: nestjs-app
  template:
    metadata:
      labels:
        name: nestjs-app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: nestjs-app
        image: api:develop-latest
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
            - name: seed-volume
              mountPath: /usr/src/apps/api/prisma/seed.ts
              subPath: seed.ts
            - name: log-volume
              mountPath: /tmp/log
        resources:
          requests:
            cpu: 100m 
            memory: 500Mi 
          limits:
            cpu: 300m 
            memory: 750Mi
      - name: filebeat
        image: docker.elastic.co/beats/filebeat:7.10.0
        args: ["-c", "/usr/share/filebeat/filebeat.yml", "-e"]
        volumeMounts:
        - name: log-volume
          mountPath: /tmp/log/
        - name: filebeat-config
          mountPath: /usr/share/filebeat/filebeat.yml
          subPath: filebeat.yml
        resources:
          requests:
            cpu: 10m 
            memory: 50Mi 
          limits:
            cpu: 20m 
            memory: 100Mi
      - name: logrotate
        image: artifacts.developer.gov.bc.ca/af3c-gen-docker-local/logrotate:develop-latest  # Specify your logrotate image
        volumeMounts:
          - name: log-volume
            mountPath: /tmp/log  # Ensure this is the same path as in the nestjs-app
        command: ["/usr/local/bin/logrotate-script.sh"]  # Command to run logrotate
        resources:
          requests:
            cpu: 10m 
            memory: 50Mi 
          limits:
            cpu: 20m 
            memory: 100Mi
      volumes:
      - name: log-volume
        emptyDir: {}
      - name: filebeat-config
        configMap:
          name: filebeat-configmap
      - name: seed-volume
        secret:
          secretName: seed-secret
