deployments/openshift/kustomize/base/api/nestjs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    name: api
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
