deployments/openshift/kustomize/base/api/nestjs/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
spec:
  to:
    kind: Service
    name: api
  port:
    targetPort: 4000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
