deployments/openshift/kustomize/base/api/nestjs/np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-ingress-nestjs
spec:
  podSelector:
    matchLabels:
      name: api
  ingress:
    - {}
  policyTypes:
    - Ingress
